--- a/index.html
+++ b/index.html
@@ -3,9 +3,82 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>ハンドルネームのポートフォリオ</title>
+    <title>tower2000ポートフォリオ</title>
   </head>
   <body>
-    <h1>ハンドルネーム</h1>
+    <h1>tower2000</h1>
+    
+    <h2>About</h2>
+    <p>
+      ゲームが好き。<br>
+      じぶんが面白いと思えるゲームを作りたい。
+    </p>
+
+    <h3>Profile</h3>
+    <ul>
+      <li>tower2000</li>
+      <li>神奈川県</li>
+      <li>得意領域（動画編集など）</li>
+    </ul>
+
+    <h3>Skills</h3>
+    <table>
+      <tr>
+        <th>OS</th>
+        <td>Windows, Ubuntu など</td>
+      </tr>
+      <tr>
+        <th>Engine, Frameworks</th>
+        <td>Node.js, Express など</td>
+      </tr>
+      <tr>
+        <th>Tool, MiddleWare</th>
+        <td>AdobePremierePro など</td>
+      </tr>
+      <tr>
+        <th>資格・免許</th>
+        <td>普通自動車第一種運転免許（AT限定）</td>
+      </tr>
+    </table>
+
+    <h3>Works</h3>
+    <p>アピールできる活動内容を書きましょう。</p>
+    <ul>
+      <li><a href="https://github.com/">GitHub</a></li>
+      <li><a href="https://qiita.com/">Qiita</a></li>
+      <li><a href="https://zenn.dev/">Zenn</a></li>
+      <li>
+        作った作品
+        <ul>
+          <li><a href="https://example.com/">作品 1</a></li>
+          <li><a href="https://example.com/">作品 2</a></li>
+        </ul>
+      </li>
+    </ul>
+
+    <h3>Contact</h3>
+    <p>連絡先や SNS のアカウントを書きましょう。</p>
+    <ul>
+      <li><a href="minosu2000@gmail.com">Mail</a></li>
+      <li><a href="https://x.com/tower569021">X(旧 Twitter)</a></li>
+      <li><a href="https://www.linkedin.com/">LinkedIn</a></li>
+    </ul>
+
+    <h3>History</h3>
+    <p>学歴、職歴、アルバイト、インターン経験など。</p>
+    <table>
+      <tr>
+        <th>2019 年</th>
+        <td><a 日本航空高等学校</a> 卒業</td>
+      </tr>
+      <tr>
+        <th>2024 年</th>
+        <td>ZEN大学</a> 入学</td>
+      </tr>
+      <tr>
+        <th>2020 年</th>
+        <td>株式会社OK パート</td>
+      </tr>
+    </table>
   </body>
 </html>
