--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <table>
       <tr>
         <th>2019 年</th>
-        <td><a> 日本航空高等学校</a> 卒業</td>
+        <td> 日本航空高等学校</a> 卒業</td>
       </tr>
       <tr>
         <th>2024 年</th>
