--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>tower2000</h1>
-    
+    <img src="d8889b9d-private.png ">
     <h2>About</h2>
     <p>
       ゲームが好き。<br>
