--- a/index.html
+++ b/index.html
@@ -62,7 +62,6 @@
     <ul>
       <li><a href="minosu2000@gmail.com">Mail</a></li>
       <li><a href="https://x.com/tower569021">X(旧 Twitter)</a></li>
-      <li><a href="https://www.linkedin.com/">LinkedIn</a></li>
     </ul>
 
     <h3>History</h3>
@@ -81,5 +80,8 @@
         <td>株式会社OK パート</td>
       </tr>
     </table>
+
+        <h3>好きな動画</h3>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/WkqPh70G3gY?si=rXtDo0ZpEXmeidln" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
   </body>
 </html>
