--- a/index.html
+++ b/index.html
@@ -58,10 +58,9 @@
     </ul>
 
     <h3>Contact</h3>
-    <p>連絡先や SNS のアカウントを書きましょう。</p>
+    <p> SNS </p>
     <ul>
-      <li><a href="minosu2000@gmail.com">Mail</a></li>
-      <li><a href="https://x.com/tower569021">X(旧 Twitter)</a></li>
+     <li><a href="https://x.com/tower569021">X(旧 Twitter)</a></li>
     </ul>
 
     <h3>History</h3>
@@ -82,9 +81,8 @@
     </table>
 
         <h3>好きな動画</h3>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/WkqPh70G3gY?si=rXtDo0ZpEXmeidln" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-
+   <iframe width="560" height="315" src="https://www.youtube.com/embed/Q6is6K8jbho?si=pQ80pgXqMlU-kyZq&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <h3>Open Processing</h3>
-　　<iframe src="https://openprocessing.org/sketch/2790406/embed/" width="400" height="400"></iframe>
+　　<iframe src="https://openprocessing.org/sketch/2790406/embed/" width="600" height="600"></iframe>
   </body>
 </html>
