--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           </div>
           <div class="card">
             <strong>Hollow Knight: Silksong</strong>
-            <span>Action / Adventure</span>
+            <span>Metroidvania</span>
           </div>
           <div class="card">
             <strong>星のカービィシリーズ</strong>
