--- a/index.html
+++ b/index.html
@@ -109,6 +109,13 @@
         <small>&copy; 2024 tower2000</small>
       </footer>
 
+      <section>
+        <h3>Scratch</h3>
+        <div style="text-align: center; margin-top: 20px;">
+          <iframe src="https://scratch.mit.edu/projects/1232643468/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen style="max-width: 100%;"></iframe>
+        </div>
+      </section>
+
     </div></body>
 </html>
   </body>
