--- a/index.html
+++ b/index.html
@@ -47,21 +47,21 @@
         </table>
       </section>
 
-<section>
+      <section>
         <h3>好きなゲーム</h3>
         <div class="card-grid">
-          <div class="card">
+          <a href="https://www.hollowknight.com/" class="card" target="_blank">
             <strong>Hollow Knight</strong>
             <span>Metroidvania</span>
-          </div>
-          <div class="card">
+          </a>
+          <a href="https://www.hollowknightsilksong.com/" class="card" target="_blank">
             <strong>Hollow Knight: Silksong</strong>
-            <span>Metroidvania</span>
-          </div>
-          <div class="card">
+            <span>Action / Adventure</span>
+          </a>
+          <a href="https://www.kirby.jp/" class="card" target="_blank">
             <strong>星のカービィシリーズ</strong>
             <span>Action</span>
-          </div>
+          </a>
         </div>
       </section>
 
