--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           </a>
           <a href="https://www.hollowknightsilksong.com/" class="card" target="_blank">
             <strong>Hollow Knight: Silksong</strong>
-            <span>Action / Adventure</span>
+            <span>Metroidvania</span>
           </a>
           <a href="https://www.kirby.jp/" class="card" target="_blank">
             <strong>星のカービィシリーズ</strong>
